--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 
       <div class="controls">
         <button class="backward">
-          <i class="fa-solid fa-backward"></i>
+          <i style="transform: rotate(180deg);" class="fa-solid fa-forward-step"></i>
         </button>
         <button class="play-pause-btn">
           <i class="fa-solid fa-play" id="controlIcon"></i>
         </button>
         <button class="forward">
-          <i class="fa-solid fa-forward"></i>
+          <i class="fa-solid fa-forward-step"></i>
         </button>
       </div>
     </div>
