update index html
changed header text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="album-cover">
-      <h1 style="color: #fff">Vibraxx Musics</h1>
+      <h1 style="color: #fff">Playlist #1</h1>
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
